--- a/src/settings.ui
+++ b/src/settings.ui
@@ -1639,7 +1639,7 @@
            </item>
            <item>
             <property name="text">
-             <string>Float</string>
+             <string>Flat</string>
             </property>
            </item>
            <item>
