--- a/src/settings.ui
+++ b/src/settings.ui
@@ -1653,27 +1653,41 @@
           </widget>
          </item>
          <item row="18" column="0">
+          <widget class="QLabel" name="label_49">
+           <property name="text">
+            <string>Internal</string>
+           </property>
+          </widget>
+         </item>
+         <item row="18" column="1">
+          <widget class="QCheckBox" name="cbIgnoreDocumentMargins">
+           <property name="text">
+            <string>Ignore document margins</string>
+           </property>
+          </widget>
+         </item>
+         <item row="19" column="0">
           <widget class="QLabel" name="label_17">
            <property name="text">
             <string>.TXT files</string>
            </property>
           </widget>
          </item>
-         <item row="18" column="1">
+         <item row="19" column="1">
           <widget class="QCheckBox" name="cbTxtPreFormatted">
            <property name="text">
             <string>Disable automatic formatting</string>
            </property>
           </widget>
          </item>
-         <item row="19" column="0">
+         <item row="209" column="0">
           <widget class="QLabel" name="label_15">
            <property name="text">
             <string>Sample</string>
            </property>
           </widget>
          </item>
-         <item row="19" column="1">
+         <item row="20" column="1">
           <widget class="CR3View" name="crSample" native="true">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
