--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -11,11 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>CoolReader</string>
+   <string>CoolReaderNG/Qt</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="cr3res.qrc">
-    <normaloff>:/icons/icons/cr3.png</normaloff>:/icons/icons/cr3.png</iconset>
+   <iconset resource="crqtres.qrc">
+    <normaloff>:/icons/icons/crqt.png</normaloff>:/icons/icons/crqt.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="minimumSize">
@@ -72,7 +72,7 @@
      <x>0</x>
      <y>0</y>
      <width>600</width>
-     <height>21</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -159,7 +159,7 @@
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionOpen">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/fileopen.png</normaloff>:/icons/action/icons/fileopen.png</iconset>
    </property>
    <property name="text">
@@ -182,7 +182,7 @@
   </action>
   <action name="actionClose">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/exit.png</normaloff>:/icons/action/icons/exit.png</iconset>
    </property>
    <property name="text">
@@ -205,7 +205,7 @@
   </action>
   <action name="actionNextPage">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/forward.png</normaloff>:/icons/action/icons/forward.png</iconset>
    </property>
    <property name="text">
@@ -220,7 +220,7 @@
   </action>
   <action name="actionPrevPage">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/back.png</normaloff>:/icons/action/icons/back.png</iconset>
    </property>
    <property name="text">
@@ -326,7 +326,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/window_fullscreen.png</normaloff>:/icons/action/icons/window_fullscreen.png</iconset>
    </property>
    <property name="text">
@@ -341,7 +341,7 @@
   </action>
   <action name="actionZoom_In">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/viewmag+.png</normaloff>:/icons/action/icons/viewmag+.png</iconset>
    </property>
    <property name="text">
@@ -356,7 +356,7 @@
   </action>
   <action name="actionZoom_Out">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/viewmag-.png</normaloff>:/icons/action/icons/viewmag-.png</iconset>
    </property>
    <property name="text">
@@ -371,7 +371,7 @@
   </action>
   <action name="actionTOC">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/view-table-of-contents-ltr.png</normaloff>:/icons/action/icons/view-table-of-contents-ltr.png</iconset>
    </property>
    <property name="text">
@@ -386,7 +386,7 @@
   </action>
   <action name="actionRecentBooks">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/folder_favorite.png</normaloff>:/icons/action/icons/folder_favorite.png</iconset>
    </property>
    <property name="text">
@@ -401,7 +401,7 @@
   </action>
   <action name="actionSettings">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/configure.png</normaloff>:/icons/action/icons/configure.png</iconset>
    </property>
    <property name="text">
@@ -416,7 +416,7 @@
   </action>
   <action name="actionCopy">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/editcopy.png</normaloff>:/icons/action/icons/editcopy.png</iconset>
    </property>
    <property name="text">
@@ -461,7 +461,7 @@
   </action>
   <action name="actionAddBookmark">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/bookmark.png</normaloff>:/icons/action/icons/bookmark.png</iconset>
    </property>
    <property name="text">
@@ -476,7 +476,7 @@
   </action>
   <action name="actionShowBookmarksList">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/bookmark_folder.png</normaloff>:/icons/action/icons/bookmark_folder.png</iconset>
    </property>
    <property name="text">
@@ -491,7 +491,7 @@
   </action>
   <action name="actionFileProperties">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/player_playlist.png</normaloff>:/icons/action/icons/player_playlist.png</iconset>
    </property>
    <property name="text">
@@ -506,7 +506,7 @@
   </action>
   <action name="actionRotate">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/rotate_cw.png</normaloff>:/icons/action/icons/rotate_cw.png</iconset>
    </property>
    <property name="text">
@@ -518,7 +518,7 @@
   </action>
   <action name="actionFindText">
    <property name="icon">
-    <iconset resource="cr3res.qrc">
+    <iconset resource="crqtres.qrc">
      <normaloff>:/icons/action/icons/find.png</normaloff>:/icons/action/icons/find.png</iconset>
    </property>
    <property name="text">
@@ -624,7 +624,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="cr3res.qrc"/>
+  <include location="crqtres.qrc"/>
  </resources>
  <connections>
   <connection>
